# Confounder

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
confounder/: __init__.py  cli.py  config.py
confounder/api/: routes.py  server.py
confounder/correction/: __init__.py  explainer.py  suggester.py
confounder/data/: __init__.py  loader.py  validator.py
confounder/detection/: __init__.py  statistical.py  validator.py
confounder/estimation/: __init__.py  bias.py  sensitivity.py
confounder/graph/: __init__.py  visualizer.py
confounder/llm/: __init__.py  adapter.py  parser.py  prompts.py
examples/: ab_test.py
tests/: conftest.py  test_api.py  test_cli.py  test_correction.py  test_data.py  test_detection.py  test_estimation.py  test_llm.py
tests/fixtures/: synthetic_studies.py
