[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confounder"
version = "0.1.0"
description = "Uses LLMs + causal statistics to detect hidden confounders in observational studies before they invalidate your results."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Confounder Contributors"},
]
keywords = ["causal-inference", "observational-study", "bias", "confounder", "ab-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy==1.11.4",
    "pandas>=2.1",
    "statsmodels==0.14.0",

    "litellm>=1.30.0",
    "ollama>=0.2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "typer[all]>=0.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "rich>=13.7",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
confounder = "confounder.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
collect_ignore = ["confounder"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
